# code-review-platform

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_auth_rbac_schema.py  0002_create_phase2_admin_console_schema.py  0003_add_webhook_review_execution_schema.py  0004_create_pico_online_agent_schema.py  0004_create_repo_agent_schema.py  0004_pico_online_agent_schema_compat.py
backend/app/: main.py
backend/app/agent/: __init__.py  context.py  event_recorder.py  memory.py  protocol.py  redaction.py  repository_provider.py  run_service.py  snapshot_service.py  tool_gateway.py  tools.py  workspace.py
backend/app/api/: router.py
backend/app/core/: config.py  crypto.py  env_compat.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/integrations/: __init__.py  base.py  github.py  gitlab.py
backend/app/llm/: __init__.py  client_factory.py  provider.py
backend/app/review/: __init__.py
backend/app/schemas/: agent.py  audit_log.py  auth.py  common.py  dashboard.py  integration_webhook.py  llm_model.py  me.py  member_analytics.py  menu.py  notification_bot.py  pagination.py  permission.py  project.py  project_template.py  review_record.py  role.py  user.py
backend/app/security/: __init__.py  deps.py  passwords.py  redis_store.py  tokens.py
backend/scripts/: import_review_logs.py  seed_dev_admin_console_data.py  verify_full_review_flow.py  verify_pico_online_agent_flow.py  verify_project_repo_agent_flow.py
backend/tests/: conftest.py
(+254 files in other folders)
