[project]
name = "ai-code-reviewer-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "authlib>=1.3.0",
  "pwdlib[argon2]>=0.2.0",
  "pydantic-settings>=2.4.0",
  "cryptography>=43.0.0",
  "jinja2>=3.1.0",
  "pyyaml>=6.0.0",
  "openai>=1.0.0",
  "anthropic>=0.34.0",
  "zhipuai>=2.1.5",
  "ollama>=0.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
